Fix for legend overlapping form label

--- a/less/forms-and-buttons.less
+++ b/less/forms-and-buttons.less
@@ -115,6 +115,7 @@ legend,
 }
 
 .contactform .legend {
+    height: 32px;
     margin-left: 45px;
     white-space: nowrap;
     &:before {
